--- a/templates/home.html
+++ b/templates/home.html
@@ -1,59 +1,37 @@
 <!DOCTYPE html>
 <html>
   <head>
+    
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Sathya Careers Page</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
     <style>
-
-      * {
-        font-family:Roboto;
-        
-      }
-
-      h1,h2 {
-        text-align: center;
-        
-      }
-      
-      h1 {        
-        font-size: 50;
-        font-weight: bold;
-        color: rgb(100,100,100)
-      }
-      
       #banner {
         width: 100%;
         height: 360px;
         object-fit: cover;        
-      }
-      .bodytext {
-        
-        color: rgb(80,80,80)
-      }
-
-      h2 {        
-        font-size: 30;
-        font-weight: normal;
-        color: rgb(80,80,80)
-      }
-
-      #container {
-        max-width : 720px;
-        margin: 0 auto;
-      }
-      
+      }      
     </style>
   </head>
   <body>
-    <div id="container">
-    <h1>Career's Page</h1>
+    <div class="container">
+    <h1 class="text-center mt-4 mb-4">{{company_name}} Career's Page</h1>
     <img id="banner" src="/static/banner.jpg">
-    <h2>About</h2>
-    <p class="bodytext">
+    <h2 class="text-center mt-2 mb-4">About</h2>
+    <p class="lead">
       Lorem ipsum odor amet, consectetuer adipiscing elit. Dapibus ultrices rutrum proin metus vestibulum elit enim luctus. Facilisis habitasse vestibulum aliquam bibendum, sit nibh. Diam dictum finibus sollicitudin lectus praesent mus nibh. Rhoncus leo curae; maximus consectetur platea id. Lacinia odio diam dui conubia senectus taciti. Curabitur donec mi in amet ac curabitur.
     </p>
-    <h2>Open Positions</h2>
-      <div style="text-align:center">
-    <button>Contact Us</button>
+    <h2 class="text-center mt-2 mb-4">Open Positions</h2>
+<div>
+  {% for job in jobs %}
+  {% include 'jobitem.html' %}
+  {% endfor %}
+</div>
+      
+      <div class="text-center">
+    <button class="btn btn-primary btn-lg">Contact Us</button>
       </div>
       </div>
   </body>
